improve filename, fix tags for viewer